--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,12 @@ spring.main.allow-bean-definition-overriding=true
 # Hibernate
 spring.jpa.hibernate.ddl-auto=update
 server.port=8080
+
+
+#Logger
+logging.level.org.springframework.web=ERROR
+logging.leve.ua.lviv.lgs.periodicals=DEBUG
+logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} [%thread] %5level %logger{36} - %msg%n
+
+logging.file.name=/Users/stealers/IdeaProjects/Periodical/log_file.log
+logging.pattern.file=%d{yyyy-MM-dd HH:mm:ss} [%thread] %5level %logger{36} - %msg%n
