add UI and Role

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 # Replace with your connection string
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/Periodical
+spring.datasource.url=jdbc:mysql://localhost:3306/UNIVERSYTY
 spring.datasource.username=root
 spring.datasource.password=root
 spring.jpa.database-platform = org.hibernate.dialect.MySQL5Dialect
