--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/UNIVERSYTY
 spring.datasource.username=root
 spring.datasource.password=root
-spring.jpa.database-platform = org.hibernate.dialect.MySQL5Dialect
+spring.jpa.database-platform = org.hibernate.dialect.MySQL8Dialect
 spring.jpa.show-sql = true
 spring.main.allow-bean-definition-overriding=true
 
@@ -11,6 +11,8 @@ spring.main.allow-bean-definition-overriding=true
 
 # Hibernate
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 server.port=8080
 
 
